// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="cf-1bek1ug"
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1wm9h0q"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </span>
    </li>
    <li
      className="cf-1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-olcaob"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 1`] = `
<div
  className="cf-1bek1ug"
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1wm9h0q"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </span>
    </li>
    <li
      className="cf-1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1isqwou"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </span>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-olcaob"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="cf-1bek1ug"
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1wm9h0q"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-olcaob"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="cf-1bek1ug"
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1wm9h0q"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-olcaob"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </span>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 1`] = `
<div
  className="cf-1bek1ug"
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-1wm9h0q"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-1wi2cf1"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-109b087"
        href="#"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="cf-15spu1u"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        20
      </a>
    </li>
    <li
      className="cf-hmei63"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-32iz07"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-olcaob"
          id={undefined}
          style={undefined}
        >
          <span
            className="cf-1u9fru1"
            id={undefined}
            style={undefined}
          />
        </i>
      </a>
    </li>
  </ul>
</div>
`;
